# InstantNotes

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  vite.config.js
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-17-wysiwyg-preview-toggle-design.md
openspec/: project.md
openspec/changes/chore-project-scaffold/: proposal.md  tasks.md
openspec/changes/feat-editor-toolbar/: proposal.md  tasks.md
openspec/changes/feat-list-tab-indent/: proposal.md  tasks.md
openspec/changes/feat-local-notes-engine/: proposal.md  tasks.md
openspec/changes/feat-macos-capture-shell/: proposal.md  tasks.md
openspec/changes/feat-notes-library-ui/: proposal.md  tasks.md
openspec/changes/feat-settings-contexting/: proposal.md  tasks.md
openspec/changes/feat-titlebar-theme-sync/: proposal.md  tasks.md
openspec/changes/feat-updater-overhaul/: proposal.md  tasks.md
openspec/changes/feat-workspaces/: proposal.md  tasks.md
openspec/changes/fix-palette-long-title/: proposal.md  tasks.md
openspec/changes/tauri-conformance-and-library-refactor/: proposal.md  tasks.md
openspec/changes/themes-and-command-palette/: proposal.md  tasks.md
openspec/specs/instantnotes/: spec.md
scripts/: bump-version.mjs  bump-version.test.ts  make-update-manifest.sh  tauri-dev.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  dialog.json  updates.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: domain.rs  error.rs  lib.rs  sensitive.rs  store.rs  types.rs
src-tauri/core/tests/: store_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: app.css  command-filter.test.ts  command-filter.ts  commands.ts  contexting-format.test.ts  contexting-format.ts  debounce.test.ts  debounce.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  list-indent.test.ts  list-indent.ts  markdown-active.test.ts  markdown-active.ts  markdown-format.test.ts  markdown-format.ts  markdown-highlight.test.ts  markdown-highlight.ts  selection.test.ts  selection.ts  updater-snooze.test.ts  updater-snooze.ts  wysiwyg.test.ts  wysiwyg.ts
src/lib/api/: client.test.ts  client.ts  types.ts
src/lib/components/: BulkActions.svelte  CommandPalette.svelte  Editor.svelte  FormatToolbar.svelte  NoteEditor.svelte  NoteList.svelte  (+5 more)
src/routes/: +layout.svelte  +page.svelte
(+19 files in other folders)
