[workspace]
members = ["core"]
resolver = "2"

[package]
name = "instantnotes"
version = "0.3.0"
description = "InstantNotes — instant capture, organized knowledge"
edition = "2021"

[lib]
name = "instantnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
instantnotes-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
