[workspace]
members = ["core"]
resolver = "2"

[package]
name = "instantnotes"
version = "0.6.2"
description = "InstantNotes — instant capture, organized knowledge"
edition = "2021"

[lib]
name = "instantnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
instantnotes-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

# Native macOS window materials (Liquid Glass / vibrancy). macOS-only; the app
# ships for Apple Silicon, but the cfg keeps non-macOS builds honest.
[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.6"

# Smaller, faster release binaries (Tauri's recommended profile). Lives in the
# workspace root manifest so it applies to the whole workspace.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
